@@ -31,13 +31,14 @@ Changes to next release:
   - exceeding the instruction length limit of 15 bytes (this only can
     occur when redundant prefixes are placed before an instruction)
     generate #GP(0) (Stanislav)
-  - several CPU bug fixes made by Kevin Lawton
+  - several protected mode fixes by Kevin Lawton
 
 - CPU (x86-64) (Stanislav)
   - fetchdecode fixes for x86-64 and 3DNow!
   - fixed CF flag handling for SHL instruction in x86-64 mode
   - implemented CR8 register (aliased to APIC.TPR[7:4]) in x86-64 mode
   - implemented NXE bit (No-Execute page protection) support for x86-64
+  - several x86-64 fixes by Avi Kivity
 
 - FPU
   - totally rewritten all FPU code based on softfloat library 
@@ -205,6 +206,7 @@ Changes to next release:
  [1095473] Reading from a CDRW (Fixed) by Ben Lunt
  [1123895] x86-64 gdb/debugger fixes by Avi Kivity
  [1145423] stosq simulation bugfix by Avi Kivity
+ [1151012] allow null ss on x86-64 by Avi Kivity
 
 - SF patches partially applied
   [896733] Lazy flags, for more instructions, only 1 src op
